examples/tls-app-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-app
  annotations:
    external-dns.alpha.kubernetes.io/alias: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: test-tls-passthrough.example.com ## <-- CHANGE THIS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tls-app
                port: 
                  number: 443
